--- a/src/text.properties
+++ b/src/text.properties
@@ -1,9 +1,11 @@
+# start
+start.label = Select a language
+
 # login
-enter.button = Welcome
+enter.button = Hello
 login.label = Login
 password.label = Password
 login.button = login
-registration.label = First time?
 registration.button = registration
 
 # registration
@@ -41,8 +43,8 @@ name.label = name
 dragonAge.label = age
 dragonWeight.label = weight
 dragonType.label = type
-x_coordinate.label = x coordinate
-y_coordinate.label = y coordinate
+xcoordinate.label = x coordinate
+ycoordinate.label = y coordinate
 dragonDescription.label = description
 locationX.label = X
 locationY.label = Y
